--- a/references.bib
+++ b/references.bib
@@ -426,6 +426,10 @@
 	howpublished = {\url{https://github.com/nielstenboom/recurring-content-detector}}
 }
 
+@misc{faiss-blog,
+	title = {Blog: Faiss, A library for efficient similarity searc},
+	howpublished = {\url{https://code.fb.com/data-infrastructure/faiss-a-library-for-efficient-similarity-search/}}
+}
 
 
 
